[gd_scene load_steps=6 format=3 uid="uid://dty3oibl0fvon"]

[ext_resource type="Script" path="res://Player/Gracz/bullet.gd" id="1_eg6pt"]
[ext_resource type="Texture2D" uid="uid://cf115c8vlcp0w" path="res://icon.svg" id="1_tkt4b"]
[ext_resource type="AudioStream" uid="uid://crk0xievqkht" path="res://Sound/explosion.wav" id="3_ugo8v"]

[sub_resource type="Curve" id="Curve_s86wu"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.97191, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_tnh4j"]
radius = 4.0

[node name="Bullet" type="CharacterBody2D" node_paths=PackedStringArray("explosion_sfx")]
script = ExtResource("1_eg6pt")
explosion_sfx = NodePath("explosion_sfx")

[node name="CPUParticles2D_nieuzywane" type="CPUParticles2D" parent="."]
emitting = false
amount = 120
one_shot = true
explosiveness = 0.9
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 38.38
initial_velocity_max = 109.09
scale_amount_min = 3.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_s86wu")
color = Color(1, 0.701961, 0.0862745, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(100, 100, 100, 1)
self_modulate = Color(1, 0, 0, 1)
position = Vector2(0, -3.57628e-07)
scale = Vector2(0.117188, 0.0625)
texture = ExtResource("1_tkt4b")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_tnh4j")

[node name="explosion_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ugo8v")
volume_db = -12.891

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
